--- a/src/p/build.config.json
+++ b/src/p/build.config.json
@@ -1,6 +1,7 @@
 {
 	"script": {
 	    "framework.js": ["./framework/main", "./knockout/main", "./jquery/main"],
-	    "index.js": ["./index/main"]
+	    "index.js": ["./index/main"],
+	    "login.js": ["./login/main"]
 	}
 }
