为登陆注册页面增加hash路由； 增加卡片集合展示页面；

--- a/src/p/build.config.json
+++ b/src/p/build.config.json
@@ -2,6 +2,7 @@
 	"script": {
 	    "framework.js": ["./framework/main", "./knockout/main", "./jquery/main"],
 	    "index.js": ["./index/main"],
-	    "login.js": ["./login/main"]
+	    "login.js": ["./login/main"],
+	    "set.js": ["./set/main"]
 	}
 }
