--- a/src/p/build.config.json
+++ b/src/p/build.config.json
@@ -3,6 +3,7 @@
 	    "framework.js": ["./framework/main", "./knockout/main", "./jquery/main"],
 	    "index.js": ["./index/main"],
 	    "auth.js": ["./auth/main"],
-	    "set.js": ["./set/main"]
+	    "set.js": ["./set/main"],
+	    "setedit.js": ["./setedit/main"]
 	}
 }
